map production log files to volume

--- a/WebAPI/nlog.Development.config
+++ b/WebAPI/nlog.Development.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
+      internalLogLevel="Warn"
       internalLogFile="nlog-internal.log">
   <!--See documentation:-->
   <!-- https://github.com/nlog/NLog/wiki/Configuration-file -->
