--- a/WebAPI/nlog.Production.config
+++ b/WebAPI/nlog.Production.config
@@ -2,16 +2,16 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
-      internalLogFile="nlog-internal.log">
+      internalLogLevel="Warn"
+      internalLogFile="/app/logs/nlog-internal-${shortdate}.log">
   <!--See documentation:-->
   <!-- https://github.com/nlog/NLog/wiki/Configuration-file -->
   <targets>
-    <target xsi:type="File" name="file" fileName="${shortdate}.log"
+    <target xsi:type="File" name="file" fileName="/app/logs/${shortdate}.log"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
   </targets>
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="file" />
+    <logger name="*" minlevel="Info" writeTo="file" />
     <!--Skip non-critical Microsoft logs-->
     <logger name="Microsoft.*" maxLevel="Info" final="true" />
   </rules>
