deploy docker container

--- a/.gitignore
+++ b/.gitignore
@@ -318,5 +318,8 @@ ASALocalRun/
 # MSBuild Binary and Structured Log
 *.binlog
 
+# Ignore environment files
+.env*
+
 # Ignore Docker volumes
 logs/
