first phase timetable

--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -31,6 +31,7 @@
   "author": "fri-team",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.5",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
