--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -32,6 +32,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.5",
+    "mlcm": "0.0.3",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
