fix dotnet test fail mentioned in dotnet/cli#7521

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
       install:
         - dotnet restore
       script:
-        - dotnet test
+        - find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
 
 notifications:
   email: false
