--- a/APIWrapper/APIWrapper.csproj
+++ b/APIWrapper/APIWrapper.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+	<PackageReference Include="NLog.Web.AspNetCore" Version="4.5.0-rc3" />
+    <PackageReference Include="NLog" Version="4.5.0-rc06" />
   </ItemGroup>
 
 </Project>
