tests for parser #14

--- a/Tests/BackendTest/BackendTest.csproj
+++ b/Tests/BackendTest/BackendTest.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\APIWrapper\APIWrapper.csproj" />
     <ProjectReference Include="..\..\Backend\Backend.csproj" />
     <ProjectReference Include="..\..\Entities\Entities.csproj" />
   </ItemGroup>
