--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -31,6 +31,7 @@
   "author": "fri-team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "lodash": "^4.17.5",
     "material-color-hash": "^0.1.4",
