Implementation of user registration - frontend and backend input validation - AspNetCore.Identity + Mongo adapter - confirmation email #26

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="1.0.8" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.0.1.4822" />
   </ItemGroup>
 
