--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,12 @@
         "Default": "Warning"
       }
     }
+  },
+
+  "Mailing": {
+    "SMTPServer": "***",
+    "SMTPPort": "***",
+    "Username": "***",
+    "Password": "***"
   }
 }
