implementation of settings validation #26

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -13,10 +13,22 @@
     }
   },
 
-  "Mailing": {
-    "SMTPServer": "***",
-    "SMTPPort": "***",
-    "Username": "***",
-    "Password": "***"
+  "MailingSettings": {
+    "SMTPServer": "aaa",
+    "SMTPPort": "000",
+    "Username": "bbb",
+    "Password": "ddd"
+  },
+
+  "IdentitySettings": {
+    "RequireDigit": "true",
+    "RequiredLength": "8",
+    "RequireNonAlphanumeric": "false",
+    "RequireUppercase": "true",
+    "RequireLowercase": "true",
+    "RequireConfirmedEmail": "true",
+    "DefaultLockoutTimeSpan": "30",
+    "MaxFailedAccessAttempts": "10",
+    "RequireUniqueEmail": "true" 
   }
 }
