--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -61,11 +61,11 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-1": "6.24.1",
-    "browser-sync": "2.18.12",
+    "browser-sync": "^2.24.7",
     "chalk": "2.0.1",
     "concurrently": "3.5.0",
     "connect-history-api-fallback": "1.3.0",
-    "coveralls": "2.13.1",
+    "coveralls": "^3.0.2",
     "css-loader": "0.28.7",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
@@ -79,11 +79,11 @@
     "html-webpack-plugin": "2.29.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "20.0.4",
-    "jest-cli": "20.0.4",
+    "jest-cli": "^23.6.0",
     "json-loader": "0.5.4",
     "mockdate": "2.0.1",
     "node": "8.9.4",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.9.3",
     "opn-cli": "3.1.0",
     "postcss-loader": "2.0.6",
     "prompt": "1.0.0",
@@ -93,13 +93,13 @@
     "react-test-renderer": "16.0.0",
     "redux-immutable-state-invariant": "2.0.0",
     "redux-mock-store": "1.3.0",
-    "replace": "0.3.0",
+    "replace": "^1.0.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
-    "url-loader": "0.5.9",
+    "url-loader": "^1.1.1",
     "webpack": "3.1.0",
-    "webpack-bundle-analyzer": "2.8.2",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-dev-middleware": "1.11.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-md5-hash": "0.0.5"
