--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 services:
   - docker
 
+env:  
+  global:
+    - NODEJS_DONE=false
+    - CSHARP_DONE=false
+
 matrix:
   include:
     - language: node_js
@@ -16,6 +21,8 @@ matrix:
       script:
         - npm run lint
         - npm run test:CI
+      after_script:
+        - export NODEJS_DONE=true        
     - language: csharp
       mono: none
       dotnet: 2.1.4
@@ -23,6 +30,8 @@ matrix:
         - dotnet restore
       script:
         - find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
+      after_script:
+        - export CSHARP_DONE=true
 
 before_deploy:        
   - cd $TRAVIS_BUILD_DIR
@@ -38,6 +47,7 @@ deploy:
   bucket_name: $DEPLOY_BUCKET_NAME
   on:
     all_branches: true
+    condition: $NODEJS_DONE && $CSHARP_DONE
 #    branch: master        
         
 notifications:
