--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
       script:
         - npm run lint
         - npm run test:CI
+        
     - stage: 'Test C#'
       language: csharp
       mono: none
@@ -25,27 +26,26 @@ jobs:
         - dotnet restore
       script:
         - find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
-#    - stage: 'Deploy'
-#      before_deploy:        
-#        - cd $TRAVIS_BUILD_DIR
-#      deploy:
-#        skip_cleanup: true
-#        provider: elasticbeanstalk
-#        access_key_id: $AWS_ACCESS_KEY_ID
-#        secret_access_key: $AWS_SECRET_ACCESS_KEY
-#        region: $REGION
-#        app: $APP_NAME
-#        env: $DEPLOY_ENV
-#        bucket_name: $DEPLOY_BUCKET_NAME
-#        on:
-#          all_branches: true
-#          branch: master        
+        
+    - stage: 'Deploy'
+      before_deploy:        
+        - cd $TRAVIS_BUILD_DIR
+      deploy:
+        skip_cleanup: true
+        provider: elasticbeanstalk
+        access_key_id: $AWS_ACCESS_KEY_ID
+        secret_access_key: $AWS_SECRET_ACCESS_KEY
+        region: $REGION
+        app: $APP_NAME
+        env: $DEPLOY_ENV
+        bucket_name: $DEPLOY_BUCKET_NAME
 
 stages:
   - 'Test JS'
   - 'Test C#'
-#  - 'Deploy'
-  
+  - 'Deploy'
+#    if: branch = master
+    
 notifications:
   email: false
   slack:
