--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ jobs:
         - find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
         
     - stage: 'Deploy'
+      language: node_js
+      node_js:
+        - node
       before_deploy:        
         - cd $TRAVIS_BUILD_DIR
       deploy:
