--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,9 @@
 services:
   - docker
 
-jobs:
-  include:
-    - stage: 'Test JS'
-      language: node_js
-      node_js:
-        - node
-      cache:
-        directories:
-          - WebApp/node_modules
-      before_install:
-        - cd WebApp/
-      install:
-       - npm install
-      script:
-        - npm run lint
-        - npm run test:CI
-        
-    - stage: 'Test C#'
-      language: csharp
-      mono: none
-      dotnet: 2.1.4
-      install:
-        - dotnet restore
-      script:
-        - find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
-        
-
-before_deploy:        
-  - cd $TRAVIS_BUILD_DIR
+script:
+  - docker-compose up ci
+  
 deploy:
   skip_cleanup: true
   provider: elasticbeanstalk
@@ -39,11 +13,7 @@ deploy:
   app: $APP_NAME
   env: $DEPLOY_ENV
   bucket_name: $DEPLOY_BUCKET_NAME
-
-stages:
-  - 'Test JS'
-  - 'Test C#'
-    
+  
 notifications:
   email: false
   slack:
