#54 When "dotnet test" command fails in docker ci container, exit with 1

--- a/Dockerfile-CI
+++ b/Dockerfile-CI
@@ -3,6 +3,7 @@
 FROM node AS react
 WORKDIR /app/WebApp
 COPY ./WebApp ./
+# run JS tests
 RUN npm install
 RUN npm run lint
 RUN npm run test:CI
@@ -11,5 +12,6 @@ RUN npm run test:CI
 FROM microsoft/aspnetcore-build:2.0 AS dotnet
 WORKDIR /src
 COPY ./ ./
+# run dotnet tests
 RUN dotnet restore
-RUN find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
+RUN find Tests/ -type f -name "*.csproj" -exec dotnet test {} +
