--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -76,6 +76,7 @@
     "file-loader": "0.11.2",
     "history": "4.6.0",
     "html-webpack-plugin": "2.29.0",
+    "http-proxy-middleware": "^0.19.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "20.0.4",
     "jest-cli": "20.0.4",
