--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -31,6 +31,8 @@
   "author": "fri-team",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.2.0",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "lodash": "^4.17.5",
