--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -39,8 +39,8 @@
     "material-color-hash": "^0.1.4",
     "mlcm": "0.0.3",
     "object-assign": "4.1.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
@@ -189,6 +189,9 @@
       "jquery": true,
       "jest": true
     },
-    "globals": {}
+    "globals": {},
+    "rules": {
+      "react/prop-types": "off"
+    }
   }
 }
