--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Mongo2Go" Version="2.2.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.0.1.4822" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
   </ItemGroup>
 
   <ItemGroup>
