--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
+    "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0"
