--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -48,6 +48,7 @@
     "redux": "3.6.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^5.10.0",
+    "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0"
   },
