--- a/Dockerfile-CI
+++ b/Dockerfile-CI
@@ -12,4 +12,4 @@ FROM microsoft/aspnetcore-build:2.0 AS dotnet
 WORKDIR /src
 COPY ./ ./
 RUN dotnet restore
-RUN find Tests/ -type f -name "*.csproj" -exec dotnet test {} \;
+RUN find Tests/ -type f -name "*.csproj" -exec dotnet test {} +
