--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -50,7 +50,8 @@
     "redux-persist": "^5.10.0",
     "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
