--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,24 @@
         "Default": "Warning"
       }
     }
+  },
+
+  "MailingSettings": {
+    "SMTPServer": "aaa",
+    "SMTPPort": "000",
+    "Username": "bbb",
+    "Password": "ddd"
+  },
+
+  "IdentitySettings": {
+    "RequireDigit": "true",
+    "RequiredLength": "8",
+    "RequireNonAlphanumeric": "false",
+    "RequireUppercase": "true",
+    "RequireLowercase": "true",
+    "RequireConfirmedEmail": "true",
+    "DefaultLockoutTimeSpan": "30",
+    "MaxFailedAccessAttempts": "10",
+    "RequireUniqueEmail": "true" 
   }
 }
