--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -16,7 +16,10 @@
   <ItemGroup>
     <PackageReference Include="Mongo2Go" Version="2.2.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.0.1.4822" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.7.0.7192">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
   </ItemGroup>
 
