--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -14,7 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.0.1.4822" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="7.7.0.7192">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
