#27 update appsettings.json

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -14,10 +14,10 @@
   },
 
   "MailingSettings": {
-    "SMTPServer": "aaa",
-    "SMTPPort": "000",
-    "Username": "bbb",
-    "Password": "ddd"
+    "SMTPServer": "smtp.gmail.com",
+    "SMTPPort": "587",
+    "Username": "fri.t3am@gmail.com",
+    "Password": "<PASSWORD>"
   },
 
   "IdentitySettings": {
