--- a/Tests/IntegrationTest/IntegrationTest.csproj
+++ b/Tests/IntegrationTest/IntegrationTest.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentAssertions" Version="5.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1">
       <PrivateAssets>all</PrivateAssets>
