--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -51,6 +51,7 @@
     "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0",
+    "styled-components": "^4.0.3",
     "validator": "^10.8.0"
   },
   "devDependencies": {
