--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,15 +20,22 @@
     "Password": "ddd"
   },
 
-  "IdentitySettings": {
-    "RequireDigit": "true",
-    "RequiredLength": "8",
-    "RequireNonAlphanumeric": "false",
-    "RequireUppercase": "true",
-    "RequireLowercase": "true",
-    "RequireConfirmedEmail": "true",
-    "DefaultLockoutTimeSpan": "30",
-    "MaxFailedAccessAttempts": "10",
-    "RequireUniqueEmail": "true" 
+  "MailGun": {
+    "apikey": "HERE-PLACE-API-KEY-FROM-CONFLUENCE",
+    "domain": "https://api.mailgun.net/v3",
+    "senderDomain": "swapify.immersionacademics.com",
+    "fromEmail": "postmaster@swapify.immersionacademics.com"
+  },
+
+    "IdentitySettings": {
+      "RequireDigit": "true",
+      "RequiredLength": "8",
+      "RequireNonAlphanumeric": "false",
+      "RequireUppercase": "true",
+      "RequireLowercase": "true",
+      "RequireConfirmedEmail": "true",
+      "DefaultLockoutTimeSpan": "30",
+      "MaxFailedAccessAttempts": "10",
+      "RequireUniqueEmail": "true"
+    }
   }
-}
