--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,6 +20,10 @@
     "Password": "<PASSWORD>"
   },
 
+  "UrlSettings": {
+    "ApplicationUrl": "http://localhost:5000/api/"
+  },  
+
   "IdentitySettings": {
     "RequireDigit": "true",
     "RequiredLength": "8",
