--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Mongo2Go" Version="2.2.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
+    <PackageReference Include="Mustache" Version="1.0.1" />
     <PackageReference Include="RestSharp.NetCore" Version="105.2.4-rc4-24214-01" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.8.0.7320">
       <PrivateAssets>all</PrivateAssets>
@@ -27,6 +28,10 @@
   <ItemGroup>
     <ProjectReference Include="..\APIWrapper\APIWrapper.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EmailTemplate\images\" />
   </ItemGroup>
 
 
