--- a/CoursesParser/CoursesParser.csproj
+++ b/CoursesParser/CoursesParser.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj" />
+  </ItemGroup>
+
 </Project>
