--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -34,6 +34,21 @@
     <Folder Include="EmailTemplate\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="EmailTemplate\images\home-background.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\images\swapify.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\RegistrationTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\RestorePasswordTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 
 </Project>
