Feature/#88 parsing courses elearning (#89)
* parses core #88

* Parsing courses from elearning, refactorin #88

* merge #88

* Replace enum

* courses to json

* Email settings

* testfix

* email refactoring #88

* refactoring #88

* Parser project move parsing #88

* code case #88

* #88 code cleanup

* Course items to DBSeed #88

* fix after merge #88

* Path settings #88

* fix #88

* #88 code cleanup

--- a/Tests/BackendTest/BackendTest.csproj
+++ b/Tests/BackendTest/BackendTest.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\APIWrapper\APIWrapper.csproj" />
     <ProjectReference Include="..\..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\..\CoursesParser\CoursesParser.csproj" />
     <ProjectReference Include="..\..\Entities\Entities.csproj" />
   </ItemGroup>
 
