--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -12,6 +12,9 @@
       }
     }
   },
+  "PathSettings": {
+    "CoursesJsonPath": "..\\CoursesParser\\ActualCoursesJson\\courses_2018_11_20.json"
+  },
 
   "MailingSettings": {
     "SMTPServer": "smtp.gmail.com",
@@ -29,6 +32,6 @@
     "RequireConfirmedEmail": "true",
     "DefaultLockoutTimeSpan": "30",
     "MaxFailedAccessAttempts": "10",
-    "RequireUniqueEmail": "true" 
+    "RequireUniqueEmail": "true"
   }
 }
