#31 Create email template for notification - EmailService and EmailBase refactor - added ConfirmEmailBase class - email templates fix

--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -13,8 +13,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "JwtSecret": "DoNotUseMeInProduction",
-        "DomainUrl": "http://www.swapify.uniza.sk",
-        "DevelopUrl": "http://localhost:3000/"
+        "BaseUrl": "http://localhost:3000/"
       },
       "applicationUrl": "http://localhost:5000/"
     }
