--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -31,20 +31,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="EmailTemplate\images\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="EmailTemplate\images\home-background.png">
+    <None Update="Emails\EmailTemplates\images\home-background.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="EmailTemplate\images\swapify.png">
+    <None Update="Emails\EmailTemplates\images\swapify.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="EmailTemplate\RegistrationTemplate.html">
+    <None Update="Emails\EmailTemplates\RegistrationTemplate.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="EmailTemplate\RestorePasswordTemplate.html">
+    <None Update="Emails\EmailTemplates\RestorePasswordTemplate.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
