--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,6 +20,7 @@
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
     "Username": "fri.t3am@gmail.com",
+    "DisplayName": "Swapify",
     "Password": "<PASSWORD>"
   },
 
