--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -17,6 +17,7 @@
   },
 
   "MailingSettings": {
+    "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
     "Username": "fri.t3am@gmail.com",
