--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -21,7 +21,7 @@
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
     "Username": "fri.t3am@gmail.com",
-    "DisplayName": "Swapify",
+    "SenderDisplayName": "Swapify",
     "Password": "<PASSWORD>"
   },
 
