Feature/#31 create email template for notification (#93)
* #31 Implementation email of templates

* #31 Create email template for notification
- EmailService and EmailBase refactor
- added ConfirmEmailBase class
- email templates fix

* #31 email templates and email service refactor

* #31 code cleanup

--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "JwtSecret": "DoNotUseMeInProduction"
+        "JwtSecret": "DoNotUseMeInProduction",
+        "BaseUrl": "http://localhost:3000/"
       },
       "applicationUrl": "http://localhost:5000/"
     }
