--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -17,9 +17,11 @@
   },
 
   "MailingSettings": {
+    "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
     "SMTPServer": "smtp.gmail.com",
     "SMTPPort": "587",
     "Username": "fri.t3am@gmail.com",
+    "SenderDisplayName": "Swapify",
     "Password": "<PASSWORD>"
   },
 
