--- a/Tests/BackendTest/BackendTest.csproj
+++ b/Tests/BackendTest/BackendTest.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -23,6 +24,7 @@
     <ProjectReference Include="..\..\Backend\Backend.csproj" />
     <ProjectReference Include="..\..\CoursesParser\CoursesParser.csproj" />
     <ProjectReference Include="..\..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\..\WebAPI\WebAPI.csproj" />
   </ItemGroup>
 
 </Project>
