--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
+language: csharp
+mono: none
+dotnet: 2.1.502
 services:
   - docker
 
 script:
   - docker-compose up ci
-  - dotnet tool install --global dotnet-sonarscanner
-  - dotnet sonarscanner begin /k:"Swapify" /d:sonar.organization="fri-team-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=$SONAR_TOKEN /d:sonar.branch.name=$TRAVIS_BRANCH
-  - dotnet build ./Swapify.sln
-  - dotnet sonarscanner end /d:sonar.login=$SONAR_TOKEN
+  - dotnet ./SonarQube/sonar-scanner-msbuild-4.5.0.1761-netcoreapp2.0SonarScanner.MSBuild.dll begin /k:"Swapify" /d:sonar.organization="fri-team-github" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=$SONAR_TOKEN /d:sonar.branch.name=$TRAVIS_BRANCH
+  - dotnet build ../../Swapify.sln
+  - dotnet SonarScanner.MSBuild.dll end /d:sonar.login=$SONAR_TOKEN
   
 deploy:  
   provider: elasticbeanstalk
