--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -35,6 +35,7 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
+    "downshift": "^3.2.1",
     "lodash": "^4.17.5",
     "material-color-hash": "^0.1.4",
     "mlcm": "0.0.3",
@@ -52,6 +53,7 @@
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0",
     "styled-components": "^4.0.3",
+    "throttle-debounce": "^2.1.0",
     "validator": "^10.8.0"
   },
   "devDependencies": {
