#134 Change email from gmail to faculty email

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -18,11 +18,12 @@
 
   "MailingSettings": {
     "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "smtp.gmail.com",
-    "SMTPPort": "587",
-    "Username": "fri.t3am@gmail.com",
+    "SMTPServer": "smtp",
+    "SMTPPort": "0",
+    "Username": "username",
+    "SenderEmail": "email@maill.com",
     "SenderDisplayName": "Swapify",
-    "Password": "<PASSWORD>"
+    "Password": "password"
   },
 
   "IdentitySettings": {
