#137 Implement MailKit instead of SmtpClient - MailKit implementation - Added new Swapify logo to email templates

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -18,12 +18,12 @@
 
   "MailingSettings": {
     "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "smtp",
+    "SMTPServer": "<smtp_server>",
     "SMTPPort": "0",
-    "Username": "username",
+    "Username": "<login>",
     "SenderEmail": "email@maill.com",
     "SenderDisplayName": "Swapify",
-    "Password": "password"
+    "Password": "<password>"
   },
 
   "IdentitySettings": {
