--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.1.2" />
     <PackageReference Include="Mongo2Go" Version="2.2.8" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
     <PackageReference Include="Mustache" Version="1.0.1" />
@@ -31,10 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Emails\EmailTemplates\images\home-background.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Emails\EmailTemplates\images\swapify.png">
+    <None Update="Emails\EmailTemplates\images\swapify_logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Emails\EmailTemplates\RegistrationTemplate.html">
