repair of backend

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -36,5 +36,24 @@
     "DefaultLockoutTimeSpan": "30",
     "MaxFailedAccessAttempts": "10",
     "RequireUniqueEmail": "true"
+  },
+
+  "AppSettings": {
+    "TAPI_URL": "https://nic.uniza.sk/webservices",
+    "ScheduleContentURL": "getUnizaScheduleContent.php",
+    "StudyYear": {
+      "Start": {
+        "Day": 1,
+        "Month": 9
+      },
+      "Middle": {
+        "Day": 1,
+        "Month": 2
+      },
+      "End": {
+        "Day": 1,
+        "Month": 7
+      }
+    }
   }
 }
