--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -24,7 +24,7 @@
     "test:CI": "babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
     "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
-    "test:watch": "jest --watchAll",
+    "test:watch": "jest --watch",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js"
   },
@@ -33,56 +33,52 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
-    "axios": "^0.19.0",
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
-    "downshift": "^3.2.1",
-    "lodash": "^4.17.11",
+    "downshift": "^3.2.10",
+    "lodash": "^4.17.5",
     "material-color-hash": "^0.1.4",
     "mlcm": "0.0.3",
     "object-assign": "4.1.0",
     "react": "16.3.0",
-    "react-compare-image": "^1.3.0",
     "react-dom": "16.3.0",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
-    "react-slick": "^0.24.0",
-    "react-slideshow-image": "^1.1.8",
-    "react-slidez": "0.0.31",
+    "react-slideshow-image": "^1.2.0",
     "redux": "3.6.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^5.10.0",
     "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^4.0.3",
     "throttle-debounce": "^2.1.0",
     "validator": "^10.8.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.6",
     "babel-polyfill": "6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-1": "6.24.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "2.26.3",
     "chalk": "2.0.1",
     "concurrently": "3.5.0",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "3.0.2",
     "css-loader": "0.28.7",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
     "eslint": "4.2.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.3.0",
@@ -99,7 +95,7 @@
     "lodash-loader": "2.0.0",
     "mockdate": "2.0.1",
     "node": "8.9.4",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.10.0",
     "opn-cli": "3.1.0",
     "postcss-loader": "2.0.6",
     "prompt": "1.0.0",
@@ -115,7 +111,7 @@
     "style-loader": "0.19.0",
     "url-loader": "1.1.2",
     "webpack": "3.1.0",
-    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-bundle-analyzer": "3.0.3",
     "webpack-dev-middleware": "1.11.0",
     "webpack-hot-middleware": "2.18.2",
     "webpack-md5-hash": "0.0.5"
