--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Emails\EmailTemplates\ConfirmEmailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Emails\EmailTemplates\images\swapify_logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
