--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -43,6 +43,7 @@
     "react": "16.3.0",
     "react-dom": "16.3.0",
     "react-onclickoutside": "^6.7.1",
+    "react-pdf": "^4.1.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
