246_Refactor_integration_tests

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -13,7 +13,8 @@
     }
   },
   "PathSettings": {
-    "CoursesJsonPath": "..\\CoursesParser\\ActualCoursesJson\\courses_2018_11_20.json"
+    "CoursesJsonPath": "..\\CoursesParser\\ActualCoursesJson\\courses_2018_11_20.json",
+    "CoursesJsonPathFromTest": "..\\..\\..\\..\\..\\CoursesParser\\ActualCoursesJson\\courses_2018_11_20.json"
   },
 
   "MailingSettings": {
