269-Set_copy_always_to_output_directory_for_exchange_template

--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Emails\EmailTemplates\ConfirmationExchangeTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Emails\EmailTemplates\ConfirmEmailTemplate.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
