-now using EmailBase class -user and password defined in appsettings.json -renamed from "MailUs" to "SendFeedback" for more accurate description -extended appsetting MailingSettings with new attribute FeedbackEmail where feedback will be sent

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -23,7 +23,8 @@
     "Username": "<login>",
     "SenderEmail": "email@maill.com",
     "SenderDisplayName": "Swapify",
-    "Password": "<password>"
+    "Password": "<password>",
+    "FeedbackEmail": "email@maill.com"
   },
 
   "IdentitySettings": {
