--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -31,6 +31,7 @@
   "author": "fri-team",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.0",
@@ -44,11 +45,12 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-onclickoutside": "^6.7.1",
+    "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-pdf": "^4.1.0",
     "react-router-redux": "5.0.0-alpha.6",
     "react-slideshow-image": "^1.2.0",
+    "react-spinners": "^0.8.0",
     "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^6.0.0-pre2.1",
