--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -38,17 +38,19 @@
     "connected-react-router": "^6.6.1",
     "downshift": "^3.2.10",
     "lodash": "^4.17.5",
+    "material-auto-rotating-carousel": "^3.0.2",
     "material-color-hash": "^0.1.4",
     "mlcm": "0.0.3",
     "object-assign": "4.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-onclickoutside": "^6.7.1",
+    "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-pdf": "^4.1.0",
     "react-router-redux": "5.0.0-alpha.6",
     "react-slideshow-image": "^1.2.0",
+    "react-swipeable-views": "^0.13.8",
     "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.3",
     "redux-persist": "^6.0.0-pre2.1",
