--- a/WebApp/testsGUI/package.json
+++ b/WebApp/testsGUI/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/nightmare": "^2.10.4",
+    "codeceptjs": "^2.5.0",
     "codeceptjs-assert": "0.0.2",
     "colors": "^1.3.3",
     "eslint": "^5.15.1",
@@ -17,6 +18,7 @@
     "eslint-plugin-import": "^2.16.0",
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
+    "nightmare": "^3.0.2",
     "sliced": "^1.0.1"
   },
   "prettier": {
