--- a/WebApp/testsGUI/package.json
+++ b/WebApp/testsGUI/package.json
@@ -7,9 +7,10 @@
   "license": "ISC",
   "dependencies": {
     "codeceptjs": "^2.5.0",
-    "puppeteer": "^2.1.1",
+    "codeceptjs-assert": "0.0.4",
     "jquery": "^3.4.1",
-    "jquery-ui-dist": "^1.12.1"
+    "jquery-ui-dist": "^1.12.1",
+    "puppeteer": "^2.1.1"
   },
   "prettier": {
     "printWidth": 180
