--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -4,12 +4,19 @@ on:
 
 jobs:  
   build-and-test:
-    name: Start of build
+    name: github-actions_build-and-test
     runs-on: windows-latest #ubuntu-latest #windows-latest
     
     steps:
     - name: step#1 Checkout
       uses: actions/checkout@v2
+    
+    - name: step#2 Setup dotnet
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.1.100' #'2.2.108' #'3.1.100'
+    - name: step#3 Build with dotnet
+      run: dotnet build ./Swapify.sln #--configuration Release
     
     - name: step#XXX DIR
       run: |
@@ -24,13 +31,6 @@ jobs:
         dir        
         cd ../../../../../WebApp
         dir
-    
-    - name: step#2 Setup dotnet
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '3.1.100' #'2.2.108' #'3.1.100'
-    - name: step#3 Build with dotnet
-      run: dotnet build ./Swapify.sln #--configuration Release
       
     - name: step#4 Run tests
       run: dotnet test ./Tests/BackendTest/BackendTest.csproj #dotnet test --verbosity normal
