--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,20 +17,6 @@ jobs:
         dotnet-version: '3.1.100' #'2.2.108' #'3.1.100'
     - name: step#3 Build with dotnet
       run: dotnet build ./Swapify.sln #--configuration Release
-    
-    - name: step#XXX DIR
-      run: |
-        dir
-        cd WebAPI
-        dir
-        cd bin
-        dir
-        cd Debug
-        dir
-        cd netcoreapp2.0
-        dir        
-        cd ../../../../WebApp
-        dir
       
     - name: step#4 Run tests
       run: dotnet test ./Tests/BackendTest/BackendTest.csproj #dotnet test --verbosity normal
@@ -49,12 +35,12 @@ jobs:
 #        cd WebApp
 #        npm test
         
-    - name: step#8 gui tests
-      run: |
-        dotnet WebAPI/bin/Debug/netcoreapp2.0/WebAPI.dll        
-        cd ../../../../WebApp
-        npm start
-        cd testsGUI
-        npm install
-        npx codeceptjs run
+#    - name: step#8 gui tests
+#      run: |
+#        dotnet WebAPI/bin/Debug/netcoreapp2.0/WebAPI.dll        
+#        cd ../../../../WebApp
+#        npm start
+#        cd testsGUI
+#        npm install
+#        npx codeceptjs run
         
