--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
 
    server {
     listen 443 ssl;
-    server_name http://18.184.180.36/;
+    server_name https://18.184.180.36/;
     
     # ssl_certificate /ssl/<your_ssl_cert.pem>;
     # ssl_certificate_key /ssl/<your_ssl_private_key.key>;
@@ -45,12 +45,12 @@ http {
     # }
 
     location / {
-       proxy_pass http://:::3000/;
+       proxy_pass http://:::80/;
        proxy_set_header X-Real-IP  $remote_addr;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header X-Forwarded-Proto $scheme;
-       proxy_redirect http://:::3000/ $scheme://$http_host/;
+       proxy_redirect http://:::80/ $scheme://$http_host/;
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection $connection_upgrade;
