--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,17 @@ services:
       - BaseUrl=http://18.184.180.36
       - JwtSecret=CchangOrDNChanngSecr
       - NODE_ENV=production
+    # links:
+    #   - db
+    depends_on:
+      - mongodb
+    links:
+      - mongodb
+  mongodb:
+    image: mongo
+    container_name: mongodb
+    volumes:
+      - ./data:/data/db
     # expose:
     #   - 80
       # - BaseUrl=http://18.184.180.36:80/
