upgrade to core 3.1 & production routing fixed

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
   server {
     listen 80;
     server_name http://18.184.180.36/;
-    return 301 https://http://18.184.180.36/$request_uri;
+    return 301 http://http://18.184.180.36/$request_uri;
          }
 
    server {
@@ -45,6 +45,7 @@ http {
     # }
 
     location / {
+       try_files $uri $uri/ /index.html?$args;
        proxy_pass http://:::80/;
        proxy_set_header X-Real-IP  $remote_addr;
        proxy_set_header X-Forwarded-For $remote_addr;
