database connections fixed

--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -11,5 +11,9 @@
     "ASPNETCORE_ENVIRONMENT": "Production",
     "JwtSecret": "CchangeThisJWTSecreeeetPleasse",
     "BaseUrl": "http://18.193.17.141:80/"
+  },
+  "SwapifyDatabaseSettings": {
+    "ConnectionString": "mongodb://mongodb:27017",
+    "DatabaseName": "SwapifyDB"
   }
 }
