Added change to appsettings

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -26,6 +26,11 @@
     "Password": "<password>",
     "FeedbackEmail": "email@maill.com"
   },
+  
+  "RecaptchaSettings": {
+    "PrivateKey": "key",
+    "URL": "url"
+  },
 
   "IdentitySettings": {
     "RequireDigit": "true",
