Added localhost keys for captcha

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -28,8 +28,8 @@
   },
   
   "RecaptchaSettings": {
-    "PrivateKey": "key",
-    "URL": "url"
+    "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
+    "URL": "https://www.google.com/recaptcha/api/siteverify"
   },
 
   "IdentitySettings": {
